demos/statefulsets/good/service-headless.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: statefulsets-headless
spec:
  clusterIP: None
  selector:
    app: statefulsets
  ports:
    - name: http
      port: 80
      targetPort: 80
