demos/statefulsets/good/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: statefulsets
spec:
  selector:
    app: statefulsets
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
